package pers.prover07.dp.structural.adapter.classadapter;

public interface IVoltage5V {

    /**
     * 返回5V电压
     * @return
     */
    public int get5V();

}
