package pers.prover07.dp.structural.adapter.classadapter;

/**
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/13 23:17
 */
public class Voltage220V {

    /**
     * 返回 220v 电压
     * @return
     */
    public int get220V() {
        return 220;
    }

}
